--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     {
         <li class="nav-item">
             <a class="text-dark nav-link" asp-area="Identity" asp-page="/Account/Manage/Index">
-                Xin chào @UserManager.GetUserName(User)
+                Xin chào @UserManager.GetUserName(User)!
             </a>
         </li>
         <li class="nav-item">
